rust/neomacs-display/include/neomacs_display.h

extern GMainContext *g_main_context_get_thread_default(void);
extern GMainContext *g_main_context_new(void);
extern GMainContext *g_main_context_ref(GMainContext *context);
extern void g_main_context_unref(GMainContext *context);
extern void g_main_context_push_thread_default(GMainContext *context);
extern void g_main_context_pop_thread_default(GMainContext *context);
extern int32_t g_main_context_acquire(GMainContext *context);
extern void g_main_context_release(GMainContext *context);
extern GObject *g_object_new(GType objectType, const char *firstPropertyName, ...);