crates/neomacs-webview/src/platform/linux/sys.rs

//! Raw FFI bindings for WPEPlatform and WPE WebKit.
//!
//! Generated by bindgen from:
//! - wpe-platform (wpe-platform-2.0): display, view, input, and buffers
//! - wpe-webkit (wpe-webkit-2.0): WebKit browser engine

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]
#![allow(clippy::all)]

/// Opaque compatibility type referenced by a deprecated constructor in the
/// WPE WebKit headers. Neomacs never constructs or uses the legacy backend.
#[repr(C)]
pub struct wpe_view_backend {
    _opaque: [u8; 0],
}

// WPEPlatform API bindings.
#[cfg(wpe_platform_available)]
pub mod platform {
    #![allow(non_upper_case_globals)]
    #![allow(non_camel_case_types)]
    #![allow(non_snake_case)]
    #![allow(dead_code)]
    #![allow(clippy::all)]
    #![allow(improper_ctypes)]

    include!(concat!(env!("OUT_DIR"), "/wpe_platform_sys.rs"));

    // GLib main context functions (not always in generated bindings)
    #[repr(C)]
    pub struct GMainContext {
        _unused: [u8; 0],
    }

    unsafe extern "C" {
        pub fn g_main_context_default() -> *mut GMainContext;
        pub fn g_main_context_get_thread_default() -> *mut GMainContext;
        pub fn g_main_context_iteration(context: *mut GMainContext, may_block: i32) -> i32;
        pub fn g_main_context_wakeup(context: *mut GMainContext);
        pub fn g_main_context_new() -> *mut GMainContext;
        pub fn g_main_context_ref(context: *mut GMainContext) -> *mut GMainContext;
        pub fn g_main_context_unref(context: *mut GMainContext);
        pub fn g_main_context_push_thread_default(context: *mut GMainContext);
        pub fn g_main_context_pop_thread_default(context: *mut GMainContext);
        pub fn g_main_context_acquire(context: *mut GMainContext) -> i32;
        pub fn g_main_context_release(context: *mut GMainContext);
    }

    // GObject construction (variadic - for creating objects with construct-only properties)
    unsafe extern "C" {
        pub fn g_object_new(
            object_type: GType,
            first_property_name: *const libc::c_char,
            ...
        ) -> *mut GObject;

    }
}

// wpe-webkit bindings (WebKitWebView, etc.)
pub mod webkit {
    #![allow(non_upper_case_globals)]
    #![allow(non_camel_case_types)]
    #![allow(non_snake_case)]
    #![allow(dead_code)]
    #![allow(clippy::all)]
    #![allow(improper_ctypes)]

    // One deprecated WebKit constructor still mentions this opaque type.
    pub use super::wpe_view_backend;

    include!(concat!(env!("OUT_DIR"), "/wpe_webkit_sys.rs"));
}

#[cfg(test)]
#[path = "sys_test.rs"]
mod tests;
